<resources>
    <string name="app_name">AccessibilityApi</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="messages_header">Settings</string>

    <string name="number_of_inputs_key">number_of_inputs</string>
    <string name="number_of_inputs">Number of Inputs</string>

    <string name="goto_accessibility_key">goto_accessibility_settings</string>
    <string name="goto_accessibility_settings">Go to Accessibility Settings</string>

    <string name="clear_data_key">clear_data</string>
    <string name="clear_data">Clear Data</string>

    <string name="overlay_passthrough_key">overlay_passthrough</string>
    <string name="overlay_passthrough">Make Overlay passthrough</string>

    <string name="add_aapi_settings_key">add_aapi_settings</string>
    <string name="add_aapi_settings">Add AAPI Action</string>

    <string name="place_three_key">place_three</string>
    <string name="place_three">Place Button 3 Differently</string>

    <string name="back_action_key">back_action</string>
    <string name="back_action">Add Back Action</string>

    <string name="off_action_key">off_action</string>
    <string name="off_action">Add Off Action</string>

    <string name="off_button_key">off_button</string>
    <string name="off_button">Add Off Button</string>

    <string name="input_button_key">input_button</string>
    <string name="input_button">Add Input Button</string>

    <string name="camera_y_key">camera_y</string>
    <string name="camera_y">Camera Y</string>

    <string name="middle_offset_key">middle_offset</string>
    <string name="middle_offset">Middle Offset</string>
</resources>